@@ -55,6 +55,39 @@ _looped_sub_category.text_item
 3 Miau
 4 Moo
 
+data_[VALID][5]_capitalised_parent_and_child
+loop_
+_parent_WITH_capitalisation.key
+_parent_WITH_capitalisation.text_item
+_child_WITH_capitalisation.text_item
+1 Fox ?
+2 Dog Woof
+3 Cat Miau
+4 Cow Moo
+5 Rock .
+
+data_[VALID][6]_capitalised_parent_but_not_child
+loop_
+_parent_WITH_capitalisation.key
+_parent_WITH_capitalisation.text_item
+_child_with_capitalisation.text_item
+1 Fox ?
+2 Dog Woof
+3 Cat Miau
+4 Cow Moo
+5 Rock .
+
+data_[VALID][7]_capitalised_child_but_not_parent
+loop_
+_parent_with_capitalisation.key
+_parent_with_capitalisation.text_item
+_child_WITH_capitalisation.text_item
+1 Fox ?
+2 Dog Woof
+3 Cat Miau
+4 Cow Moo
+5 Rock .
+
 ##
 # Although this example is artficial, similar placement of child category
 # items in the loop of the parent category is observed in real data files
