@@ -44,6 +44,9 @@ cod-tools (unreleased)
     - data/replacement-values/replacement_tags.lst:
         - corrected a rule that incorrectly converted data name
           '_atom_site_refinement_flags' to '_atom_site_refinement_flag'.
+    - COD::CIF::DDL::DDLm::Validate:
+        - updated the looped parent-child category relationship recognition
+          logic to properly handle category names with uppercase letters.
   * Removed:
     - dependency installer for Fedora 37.
 
